# open-okf-wiki

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  README.md  biome.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
.scratch/adaptive-repository-wiki-runs/: spec.md
.scratch/okf-knowledge-bundle-producer/: spec.md
.scratch/operator-session-shell/: spec.md  tech-debt.md
.scratch/portable-host-filesystem-publication/: spec.md
.scratch/repository-wiki-producer/: spec.md
.scratch/source-scope-and-wiki-visualization/: spec.md
.scratch/workspace-console/: spec.md
apps/desktop/: README.md
console/: index.html  package.json  playwright.config.ts  vite.config.ts
console/e2e/: concepts.spec.ts  knowledge.spec.ts  overview.spec.ts  python-console.spec.ts  query.spec.ts  replay.spec.ts  review.spec.ts  runs.spec.ts  settings.spec.ts
console/src/: App.tsx  index.css
docs/adr/: 0001-scope-the-product-to-repository-wikis.md  0001-separate-control-and-semantic-planes.md  0002-treat-the-repository-as-untrusted-data.md  0002-use-stateless-planning-and-bounded-workers.md  0003-let-one-pydanticai-agent-own-the-semantic-loop.md  0003-use-state-machines-with-a-transactional-event-log.md  0004-publish-only-after-major-coverage-closes.md  0004-use-codemode-for-dynamic-repository-work.md  0005-classify-source-before-agent-attention.md  0005-ship-a-versioned-producer-skill-with-templates.md  0006-keep-python-as-a-thin-harness.md  0006-render-bundles-from-an-accepted-knowledge-model.md  0007-combine-deterministic-and-semantic-verification.md  0007-write-markdown-directly-to-staging.md  0008-refresh-by-impact-and-reverification.md  0008-use-page-level-grounding-before-claim-accounting.md  0009-analyze-source-without-executing-it.md  0009-configure-a-repository-snapshot-set.md  0010-start-with-isolated-single-run-workers.md  (+37 more)
examples/: wiki-run.yaml
scripts/: check-architecture.mjs  check-no-forbidden-agent-deps.mjs  check-no-legacy-protocol.mjs  check-operator-surface.mjs
tests/: query_investigation_support.py  test_accepted_knowledge.py  test_adaptive_orchestration.py  test_agent_evals.py  test_analysis_workspace.py  test_benchmark.py  test_console.py  test_diagnostics.py  test_docs.py  test_errors.py  test_gateway_live.py  test_gateway_profiles.py  test_gateway_run_worker.py  test_host_prepare.py  test_host_publication.py  test_impact_graph.py  test_investigation_evals.py  test_knowledge.py  test_package_release.py  test_production_run.py  test_provenance.py  test_provider_env.py  test_provider_retry.py  test_publication_gate.py  test_query_agent.py  test_query_evals.py  test_replay.py  test_review.py  test_run_cli.py  test_run_config.py  test_run_inventory.py  test_run_limits.py  test_run_mounts.py  test_run_publication.py  test_run_refresh.py  test_run_security.py  test_run_skill.py  test_run_validation.py  test_scheduler.py  test_session.py  (+13 more)
(+414 files in other folders)
