[project]
name = "okf-wiki"
version = "0.1.0"
description = "Build auditable OKF knowledge bundles from fixed source revisions."
requires-python = ">=3.14,<3.15"
dependencies = [
    "markdown-it-py==4.2.0",
    "mdit-py-plugins==0.6.1",
    "pydantic-ai==2.8.*",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
]

[project.scripts]
okf-wiki = "okf_wiki.cli:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.1.1",
  "ruff==0.15.21",
  "ty==0.0.58",
]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "gateway_live: requires an explicitly configured enterprise gateway",
  "package_release: builds and runs fresh distribution artifacts",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["refs"]
