[project]
name = "okf-wiki"
version = "0.1.0"
description = "Generate source-grounded Markdown Wikis from a pinned Repository Snapshot Set."
requires-python = ">=3.14,<3.15"
dependencies = [
    "genai-prices==0.0.71",
    "markdown-it-py==4.2.0",
    "mdit-py-plugins==0.6.1",
    "pydantic-ai==2.10.0",
    "pydantic-ai-harness[codemode]==0.7.0",
    "pydantic-evals==2.10.0",
    "pydantic-monty==0.0.18",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
]

[project.scripts]
okf-wiki = "okf_wiki.cli:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.21",
  "ty==0.0.58",
]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "package_release: builds and runs fresh distribution artifacts",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["refs"]
